[package]
name = "theta_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
native-tls = "*"
url = "*"
json = "*"
futures-util = "*"
futures-channel = "*"
bytes = "1"

[dev-dependencies]
tokio-test = "*"
futures-test = "*"
