[package]
name = "theta_server"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
url = "*"
futures-util = "*"
futures-channel = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "*"
futures-test = "*"
serde_test = "*"
